# varuflow

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  PROJECT.md  README.md  SECURITY.md  VARUFLOW.md  docker-compose.yml  learning-saas.md  package-lock.json
.github/workflows/: ci.yml  deploy.yml  security.yml
_dev/: SECURITY.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py  country.py  plan_check.py  rate_limit.py
backend/app/models/: __init__.py  auth.py  inventory.py  invoicing.py  organization.py  pos.py  waitlist.py
backend/app/routers/: ai_engine.py  analytics.py  auth.py  billing.py  countries.py  health.py  iban.py  integrations.py  inventory.py  invoicing.py  local_auth.py  portal.py  pos.py  recurring.py  tax.py  team.py  vat.py  waitlist.py
backend/app/schemas/: auth.py  inventory.py  invoicing.py
backend/app/services/: auth_email.py  auth_service.py  country.py  email.py  pdf_generator.py  scheduler.py
backend/migrations/: env.py
backend/migrations/versions/: 957ae9166078_initial_schema.py  a1b2c3d4e5f6_v7_product_reorder_level.py  a9b1c3d5e7f2_v9_fortnox_oauth_csrf.py  b2c4d8f1a3e5_v3_pos_barcode.py  b3c5e9f1a2d4_v8_local_auth_tables.py  b4d6f0a2c8e1_v10_stripe_idempotency.py  c3d5e9f2b4a6_v5_fortnox_openai.py  d4e6f0a3c5b7_v5_stripe_payment_links.py  e5f7a1b4c6d8_v5_portal_tokens.py  f6a8b2c4d1e3_v6_pos_refund.py
backend/scripts/: seed_test_users.py
backend/tests/: test_health.py
config/countries/: AE.json  AL.json  AR.json  AT.json  BA.json  BE.json  BG.json  BH.json  BO.json  BR.json  CA.json  CH.json  CL.json  CO.json  CR.json  CY.json  CZ.json  DE.json  DK.json  DO.json  EC.json  EE.json  EG.json  ES.json  FI.json  FR.json  GB.json  GR.json  GT.json  HR.json  HU.json  IE.json  IL.json  IQ.json  IS.json  IT.json  JM.json  JO.json  KW.json  LB.json  (+30 more)
deploy/development/: README.md  backend.env.example
deploy/preproduction/: README.md  backend.env.example
deploy/production/: README.md  backend.env.example
docs/legal/AE/: README.md
docs/legal/AL/: README.md
docs/legal/AR/: README.md
docs/legal/AT/: README.md
docs/legal/BA/: README.md
docs/legal/BE/: README.md
docs/legal/BG/: README.md
docs/legal/BH/: README.md
docs/legal/BO/: README.md
docs/legal/BR/: README.md
docs/legal/CA/: README.md
docs/legal/CH/: README.md
docs/legal/CL/: README.md
docs/legal/CO/: README.md
docs/legal/CR/: README.md
docs/legal/CY/: README.md
frontend/: .dockerignore  .env.development.example  .env.example  .env.preproduction.example  .env.production.example  Dockerfile  github token.pub  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
frontend/messages/: ar.json  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  he.json  hr.json  hu.json  is.json  it.json  lt.json  lv.json  mk.json  nl.json  no.json  pl.json  pt.json  ro.json  sk.json  sl.json  sq.json  sr.json  sv.json  tr.json  uk.json
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: middleware.ts  proxy.ts
mobile/: .env.example  app.json  babel.config.js  eas.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/android/: settings.gradle
mobile/app/: _layout.tsx
mobile/constants/: colors.ts
mobile/lib/: api-client.ts  notifications.ts  platform.ts  supabase.ts  use-api-call.ts
scripts/: apply_railway_vars.sh  apply_vercel_vars.sh  enrich_country_data.py  scaffold_global.py  set_missing_railway_secrets.sh  translate_locales.py
supabase/migrations/: 20240401000001_initial_schema.sql  20240401000002_rls_policies.sql
varuflow-playbook/: 00-10-problem-statement.md  10-30-discovery.md  30-60-mvp-build.md  30-day-roadmap.md  60-80-monetization.md  80-100-growth.md  README.md
varuflow-playbook/decisions/: ADR-001-stack.md
(+353 files in other folders)
