[tool.poetry]
name = "varuflow-backend"
version = "0.1.0"
description = "Varuflow API — inventory and invoicing for Swedish wholesalers"
authors = ["Varuflow"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1.0"
uvicorn = {extras = ["standard"], version = ">=0.34"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.40"}
asyncpg = ">=0.30"
psycopg2-binary = ">=2.9"
alembic = ">=1.15"
pydantic-settings = ">=2.9"
python-dotenv = ">=1.0"
httpx = ">=0.28"
python-jose = {extras = ["cryptography"], version = ">=3.3"}
python-multipart = ">=0.0.20"
reportlab = ">=4.4"
slowapi = ">=0.1.9"
stripe = ">=12.0"
openai = ">=1.78"
email-validator = ">=2.2"
apscheduler = {version = ">=3.11", extras = ["asyncio"]}
sentry-sdk = {version = ">=2.25", extras = ["fastapi"]}
# ── Standalone local auth ──────────────────────────────────────────────────
passlib = {extras = ["bcrypt"], version = ">=1.7"}
pyotp = ">=2.9"
aiosmtplib = ">=3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-asyncio = ">=0.25"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
